compiler/tests/should-fail/UnknownMethod.via
/* UnknownMethodError */

fun main() {
    val x: int = 42;
    x = 43;
}
